Scroll layout shift fix (not ideal)

--- a/src/app.css
+++ b/src/app.css
@@ -15,4 +15,9 @@
   h6 {
       @apply font-serif;
   }
+
+  body {
+    @apply overflow-y-scroll;
+  }
 }
+
